# blackholed

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  blackholed.toml  docker-compose.yml
src/: blocklist.rs  config.rs  db.rs  dnsmasq.rs  eventstore.rs  lib.rs  loader.rs  main.rs  model.rs  notifier.rs  parse.rs  parser.rs  resolver.rs  server.rs  sourceloader.rs  types.rs  writer.rs
src/api/: error.rs  mod.rs  model.rs  pagination.rs  state.rs  validation.rs
src/api/handlers/: events.rs  hosts.rs  mod.rs  pauses.rs  sources.rs
src/ui/: mod.rs  templates.rs
src/ui/handlers/: clients.rs  dashboard.rs  events.rs  helpers.rs  home.rs  mod.rs  pauses.rs  sources.rs
templates/: base.html  clients.html  dashboard.html  events.html  home.html
templates/partials/: client_list.html  client_pause_banner.html  event_list.html  event_rows_paginated.html  global_pause_banner.html
templates/sources/: detail.html  list.html  new.html
