[package]
name = "blackholed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.12"
askama_axum = "0.4"
async-trait = "0.1.74"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4.43", features = ["serde"] }
config = "0.13.3"
futures = "0.3.28"
hickory-server = { version = "0.25.2", features = ["resolver", "rustls-platform-verifier", "tls-aws-lc-rs"] }
lazy_static = "1.4.0"
log = "0.4.20"
nix = { version = "0.27.1", features = ["signal"] }
notify = "7"
openssl = { version = "0.10.68", features = ["vendored"] }
pretty_env_logger = "0.5.0"
redis = { version = "1.0.2", features = ["tokio-comp"] }
regex = "1.10.2"
reqwest = { version = "0.11.20", features = ["rustls-tls"] }
rustls = "0.23.36"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.2.0"
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs", "sync"] }
tokio-graceful = "0.2.2"
tokio-util = { version = "0.7.18", features = ["rt"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
